@@ -29,14 +29,14 @@
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
 -->
 
-<title>SunSpider JavaScript Benchmark Results</title>
+<title>SunSpider 0.9.1 JavaScript Benchmark Results (@SUITE@ test suite)</title>
 <link rel="stylesheet" href="../sunspider.css">
 </head>
 
 <body>
-<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark Results</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider 0.9.1 JavaScript Benchmark Results</h2>
 
-<h4>Version: @SUITE@</h4>
+<h3>Content Version: @SUITE@</h3>
 
 <p><a href="driver.html">Run Again</a></p>
 
